<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".ThirdFragment_SupertrumpfMenu">

    <Button
        android:id="@+id/button_second2"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/card_back_blank"
        android:fontFamily="@font/skranji"
        android:text="@string/gegenAI"
        android:textColor="#DDE6E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_second3"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/card_back_blank"
        android:fontFamily="@font/skranji"
        android:text="@string/gegenHuman"
        android:textColor="#DDE6E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/card_back_blank"
        android:fontFamily="@font/skranji"
        android:text="@string/previous"
        android:textColor="#DDE6E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second2"
        app:layout_constraintVertical_bias="0.207" />

    <Switch
        android:id="@+id/kartenDurchschalten"
        android:layout_width="281dp"
        android:layout_height="45dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/skranji"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/durchschalten"
        android:textColor="#323333"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.415"
        tools:checked="false" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="283dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/skranji"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/timeOn"
        android:textColor="#323333"
        app:layout_constraintBottom_toTopOf="@+id/anzKarten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.25"
        tools:checked="true" />

    <SeekBar
        android:id="@+id/seekBarZeit"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="283dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:max="45"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/anzKarten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        app:layout_constraintVertical_bias="0.048" />

    <SeekBar
        android:id="@+id/seekBarAnz"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/button_second3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <TextView
        android:id="@+id/anzKarten"
        android:layout_width="135dp"
        android:layout_height="26dp"
        android:fontFamily="@font/skranji"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:text="@string/anzKart"
        android:textColor="#323333"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarAnz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/zeitAkt"
        android:layout_width="135dp"
        android:layout_height="26dp"
        android:fontFamily="@font/skranji"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:textColor="#323333"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarAnz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toEndOf="@+id/anzKarten"
        app:layout_constraintTop_toBottomOf="@+id/seekBarZeit"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="380dp"
        android:layout_height="238dp"
        android:fontFamily="@font/skranji"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:text="@string/stdescr"
        android:textColor="#323333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>