<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/aiLevel"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:fontFamily="@font/skranji"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:text="@string/aiLevel"
        android:textColor="#323333"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarAILevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tonaktiv"
        app:layout_constraintVertical_bias="0.987" />

    <TextView
        android:id="@+id/hintergrund"
        android:layout_width="265dp"
        android:layout_height="35dp"
        android:fontFamily="@font/skranji"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:text="Hintergrund"
        android:textColor="#323333"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarhintergrund"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarAILevel"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/seekBarhintergrund"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:layout_marginTop="66dp"
        android:clickable="true"
        android:max="11"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarAILevel"
        app:layout_constraintVertical_bias="0.111" />

    <SeekBar
        android:id="@+id/seekBarAILevel"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:layout_marginBottom="132dp"
        android:clickable="true"
        android:max="2"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/tonaktiv"
        android:layout_width="281dp"
        android:layout_height="45dp"
        android:fontFamily="@font/skranji"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tonaktiv"
        android:textColor="#323333"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        tools:checked="false" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:background="@drawable/card_back_blank"
        android:fontFamily="@font/skranji"
        android:text="@string/previous"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />
</androidx.constraintlayout.widget.ConstraintLayout>